# composit

./: .gitignore  Cargo.toml  Compositfile  Dockerfile  LICENSE  README.md  VALIDATION.md  composit.config.yaml  idea-overview.html  release.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: HN-LAUNCH.md  INTERVIEW-GUIDE.md  KNOWLEDGE-VS-STATE.md  LANDING-ROLLOUT.md  NEXT-STEPS.md  OPEN-QUESTIONS.md  ROADMAP.md  SCANNER-ATTRIBUTES.md  STRATEGY.md  VALIDATION-GAPS.md
docs/demo/: README.md  record.sh  self-scan.sh
docs/interviews/: survey-de.html  survey-en.html
docs/rfcs/: 001-composit-report-format.md  002-provider-manifest-tiers.md  003-contract-response-schema.md  004-compositfile-schema.md  005-compositfile-resource-roles.md  006-cross-file-variable-resolution.md  007-jinja2-template-resolution.md  README.md
examples/: Compositfile  Compositfile-with-roles.example  composit-contract.example.json  composit-manifest.json  composit-report.yaml
examples/demo/: Compositfile  README.md  composit-diff.html
examples/demo-drift/: README.md  composit.config.yaml
examples/policies/: agent-limits.rego  provider-approval.rego
install/: install.sh
install/brew/: composit.rb
install/npm/: build-packages.mjs  package.json
landing/: CNAME  README.md  index.html
schemas/: composit-contract-response-v0.1.json  composit-provider-manifest-v0.1.json  composit-report-v0.1.json
src/: cli.rs  main.rs
src/commands/: diff.rs  init.rs  mod.rs  status.rs
src/core/: attribution.rs  compositfile.rs  config.rs  governance.rs  mod.rs  opa_eval.rs  provenance.rs  registry.rs  rego.rs  report.rs  scanner.rs  types.rs  yaml_utils.rs
src/output/: html.rs  json.rs  mod.rs  terminal.rs  yaml.rs
src/scanners/: agent_spec.rs  ansible.rs  caddyfile.rs  cargo_manifest.rs  cron.rs  db_migrations.rs  deploy_scripts.rs  docker.rs  env_files.rs  extra_patterns.rs  fly_toml.rs  go_module.rs  grafana.rs  kubernetes.rs  mcp_config.rs  mcp_provider.rs  mod.rs  (+11 more)
tests/: report_format.rs  scanner_e2e.rs
(+64 files in other folders)
