[package]
name = "composit"
version = "0.1.0"
edition = "2021"
description = "Visibility into agent-created infrastructure"
license = "MIT"

[[bin]]
name = "composit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
colored = "2"
dirs = "6"
hcl-rs = "0.18"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
