[package]
name = "composit"
version = "0.4.0"
edition = "2021"
description = "Governance-as-Code for AI-generated infrastructure — scan declarations, diff against a Compositfile, surface drift."
license = "MIT"
repository = "https://github.com/nuetzliches/composit"
homepage = "https://nuetzliches.github.io/composit"
readme = "README.md"
keywords = ["governance", "iac", "mcp", "scanner", "compositfile"]
categories = ["command-line-utilities", "development-tools", "config"]

[[bin]]
name = "composit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
colored = "2"
dirs = "6"
hcl-rs = "0.18"
regorus = { version = "0.2", default-features = false, features = ["arc"] }
minijinja = { version = "2", default-features = false, features = ["builtins", "macros", "serde"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
jsonschema = { version = "0.29", default-features = false }
